Updating containers to handle margin overflows and fixing container-fluid

--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -16,8 +16,9 @@
 
 @if $enable-grid-classes {
   .container-fluid {
-    width: 100%;
     @include make-container();
+    width: 100%;
+    max-width: 100%;
   }
 }
 
